fix: update report charts and invoice flow